@@ -117,6 +117,7 @@ where XXXXXX is the bug number as listed below.
 362223  assertion failed when .valgrindrc is a directory instead of a file
 367543  bt/btc/btr/bts x86/x86_64 instructions are poorly-handled wrt flags
 367942  Segfault vgPlain_do_sys_sigaction (m_signals.c:1138)
+368529  Android arm target link error, missing atexit and pthread_atfork
 368863  WARNING: unhandled arm64-linux syscall: 100 (get_robust_list)
 368865  WARNING: unhandled arm64-linux syscall: 272 (kcmp)
 368868  disInstr(arm64): unhandled instruction 0xD53BE000 = cntfrq_el0 (ARMv8)
